test/compilable/imports/test7491e.d
module imports.test7491e;

void map(alias pred, R)(R) {}
