test/fail_compilation/imports/fail10128b.d
auto map(alias pred, R)(R r) { return r; }
